// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemsTable Instance functions #deleteFilter set search in state properly 1`] = `
Object {
  "compliancescore": Array [
    "0-49",
    "50-69",
    "70-89",
    "90-100",
  ],
}
`;

exports[`SystemsTable Instance functions #deleteFilter set search in state properly 2`] = `
Object {
  "compliancescore": Array [
    "0-49",
    "50-69",
    "70-89",
    "90-100",
  ],
}
`;

exports[`SystemsTable Instance functions #deleteFilter set search in state properly 3`] = `
Object {
  "compliant": Array [
    "false",
  ],
}
`;

exports[`SystemsTable Instance functions #deleteFilter set search in state properly 4`] = `
Object {
  "compliant": Array [
    "false",
  ],
}
`;

exports[`SystemsTable Instance functions #onFilterUpdate set search in state properly 1`] = `Object {}`;

exports[`SystemsTable Instance functions #onFilterUpdate set search in state properly 2`] = `
Object {
  "name": "SEARCH TERM",
}
`;

exports[`SystemsTable Instance functions #onFilterUpdate set search in state properly 3`] = `Object {}`;

exports[`SystemsTable Instance functions #onFilterUpdate set search in state properly 4`] = `
Object {
  "compliancescore": Array [
    "0-49",
    "50-69",
    "90-100",
  ],
}
`;

exports[`SystemsTable expect to not render a loading state 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to not show actions if showActions is false 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to render a loading state 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to set compliant filters when enabled 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to set isDisable on export config to false total is 0 but selected is not 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to set isDisable on export config to true total is 0 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to set loading state correctly on updateSystems 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;

exports[`SystemsTable expect to show actions if showActions is true or by default 1`] = `
<StateView
  stateValues={
    Object {
      "error": undefined,
      "noError": true,
    }
  }
>
  <StateViewPart
    stateKey="error"
  >
    <ErrorPage />
  </StateViewPart>
  <StateViewPart
    stateKey="noError"
  >
    <SkeletonTable
      colSize={2}
      paddingColumnSize={0}
      rowSize={15}
    />
  </StateViewPart>
</StateView>
`;
